--- a/css/spa.css
+++ b/css/spa.css
@@ -20,6 +20,8 @@
 body {
 	color            : #444;
 	background-color : #888;
+    font             : 10pt 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
+    overflow         : hidden;
 }
 a { text-decoration: none; }
 a:link,a:visited { color:inherit; }
@@ -33,13 +35,13 @@ strong {
 
 /* Begin spa namespace selectors */
 #spa {
-	position: absolute;
-	top: 8px;
-	left: 8px;
-	right: 8px;
-	bottom: 8px;
-	border-radius: 8px 8px 0 8px;
-	background: #fff;
+	position      : absolute;
+	top           : 0px;
+	left          : 0px;
+	right         : 0px;
+	bottom        : 0px;
+	border-radius : 8px 8px 0 8px;
+	background    : #fff;
 }
 /* End spa namespace selectors */
 
